--- a/SimpleLoginApp/SimpleLoginApp/Windows/Forms/ClientForm.xaml
+++ b/SimpleLoginApp/SimpleLoginApp/Windows/Forms/ClientForm.xaml
@@ -19,8 +19,8 @@
         <TextBox Height="55" Margin="279,200,19,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" Text="Bank Details" VerticalContentAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
         <TextBox Height="86" Margin="10,273,19,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
         <TextBox Height="55" Margin="10,200,225,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Address" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="305,396,0,0" VerticalAlignment="Top" Width="75" Background="#FF1D5A8C" Foreground="Black" FontWeight="Bold" FontSize="16"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="397,396,0,0" VerticalAlignment="Top" Width="75" Foreground="Black" Background="#FFAE3434" FontSize="16" FontWeight="Bold" />
+        <Button Content="Save" HorizontalAlignment="Left" Margin="305,396,0,0" VerticalAlignment="Top" Width="75" Background="#FF1D5A8C" Foreground="White" FontWeight="Bold" FontSize="16"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="397,396,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Background="#FFAE3434" FontSize="16" FontWeight="Bold" />
 
     </Grid>
 </Window>
