--- a/BmsWpf/Views/LoginFormView.xaml
+++ b/BmsWpf/Views/LoginFormView.xaml
@@ -1,24 +1,28 @@
-﻿<Window x:Class="BmsWpf.Views.LoginFormView"
+﻿<UserControl x:Class="BmsWpf.Views.LoginFormView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BmsWpf.Views"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:viewModels="clr-namespace:BmsWpf.ViewModels"
         mc:Ignorable="d"
-        Title="LoginFormView" Height="345.453" Width="360.688" FontSize="14" Background="#FF030F1D">
+        Height="345.453" Width="360.688" FontSize="14" Background="#FF030F1D">
+    <UserControl.DataContext>
+        <viewModels:LoginFormViewModel />
+    </UserControl.DataContext>
     <Border Background="#2e3137" CornerRadius="20" Margin="10">
-    <Grid>
+        <Grid>
             <StackPanel Margin="40 20">
                 <Label Content="Login" Foreground="White" FontSize="25" HorizontalAlignment="Center"/>
                 <Separator></Separator>
                 <Label Content="Username" Foreground="White"/>
-                <TextBox Name="txtUsername" Background="#545d6a" Foreground="White" FontSize="18"/>
+                <TextBox Name="txtUsername" Background="#545d6a" Foreground="White" FontSize="18" Text="{Binding Username}"/>
                 <Label Content="Password" Foreground="White"/>
-                <PasswordBox Name="txtPassword" Background="#545d6a" Foreground="White" FontSize="18"/>
+                <TextBox Name="txtPassword" Background="#545d6a" Foreground="White" FontSize="18" Text="{Binding Passowrd}"/>
             </StackPanel>
-            <Button x:Name="btnSubmit_Copy" Click="BtnSubmit_Copy_OnClick" Content="Login" Margin="50,208,175.4,53" Background="#FF205C2F" Foreground="White" FontSize="18" Height="35"/>
-            <Button x:Name="btnSubmit" Click="btnSubmit_Click" Content="Close" Margin="179,208,49.4,53" Background="#FF852035" Foreground="White" FontSize="18"/>
+            <Button x:Name="btnSubmit_Copy" Click="BtnSubmit_Copy_OnClick" Content="Login" Margin="50,208,175.4,53" Background="#FF205C2F" Foreground="White" FontSize="18" Height="35" Command="{Binding Login}" />
+            <Button x:Name="btnSubmit" Click="btnSubmit_Click" Content="Close" Margin="179,223,49.8,67.6" Background="#FF852035" Foreground="White" FontSize="18" Command="{Binding Close}" />
             <Separator Margin="40,248,40.4,20"></Separator>
             <Label Content="Label" HorizontalAlignment="Left" Margin="316,177,0,0" VerticalAlignment="Top"/>
-        </Grid></Border>
-</Window>
+        </Grid>
+    </Border>
+</UserControl>
