--- a/BmsWpf/Views/Admin/AdminPanel.xaml
+++ b/BmsWpf/Views/Admin/AdminPanel.xaml
@@ -8,12 +8,48 @@
         Title="AdminPanel" Height="300" Width="300">
     <Grid Background="#FF2E3137">
 
-        <Button Content="Add new user" HorizontalAlignment="Left" Margin="82,105,0,0" VerticalAlignment="Top" Width="120" Height="40" Background="#FF5D85B0" FontWeight="Bold" FontSize="14" Foreground="White"/>
-        <Button Content="Manage Users" HorizontalAlignment="Left" Margin="82,174,0,0" VerticalAlignment="Top" Width="120" Height="40" Background="#FF5D85B0" FontSize="14" FontWeight="Bold" Foreground="White"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="63,36,0,0" TextWrapping="Wrap" Text="ADMIN PANEL" VerticalAlignment="Top" Width="162" FontSize="22" FontWeight="Bold" Background="#FF2E3137" Foreground="White" BorderBrush="#FF2E3137"/>
+        <Button 
+            Click="AddNewUser"
+            Content="Add new user"
+            HorizontalAlignment="Left"
+            Margin="82,105,0,0"
+            VerticalAlignment="Top"
+            Width="120" Height="40"
+            Background="#FF5D85B0"
+            FontWeight="Bold" 
+            FontSize="14"
+            Foreground="White"/>
+        <Button 
+                Click="ManageUsers"
+                Content="Manage Users"
+                HorizontalAlignment="Left"
+                Margin="82,174,0,0"
+                VerticalAlignment="Top"
+                Width="120" Height="40"
+                Background="#FF5D85B0" 
+                FontSize="14"
+                FontWeight="Bold" 
+                Foreground="White"/>
+        <TextBox HorizontalAlignment="Left"
+                 Height="30" Margin="63,36,0,0"
+                 TextWrapping="Wrap"
+                 Text="ADMIN PANEL"
+                 VerticalAlignment="Top"
+                 Width="162" FontSize="22"
+                 FontWeight="Bold"
+                 Background="#FF2E3137"
+                 Foreground="White"
+                 BorderBrush="#FF2E3137"/>
         <Separator HorizontalAlignment="Left" Height="23" Margin="22,71,0,0" VerticalAlignment="Top" Width="240"/>
-        <Separator HorizontalAlignment="Left" Height="23" Margin="22,219,0,0" VerticalAlignment="Top" Width="240"/>
-        <Button Content="LOGOUT" HorizontalAlignment="Left" Margin="187,242,0,0" VerticalAlignment="Top" Width="75" Background="#FF831C1C" Foreground="White"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="284,145,0,0" VerticalAlignment="Top"/>
+        <Separator HorizontalAlignment="Left" Height="18" Margin="22,219,0,0" VerticalAlignment="Top" Width="240"/>
+        <Button 
+            Click="Logout"
+            Content="LOGOUT" 
+            HorizontalAlignment="Left" 
+            Margin="187,242,0,0"
+            VerticalAlignment="Top"
+            Width="75"
+            Background="#FF831C1C"
+            Foreground="White"/>
     </Grid>
 </Window>
