--- a/BmsWpf/MainWindow.xaml
+++ b/BmsWpf/MainWindow.xaml
@@ -7,17 +7,21 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="549.935" Width="725.398" FontSize="14" Background="#FF030F1D">
     <Border Background="#2e3137" CornerRadius="20" Margin="20,20,20.2,13">
-        <Grid Margin="0,0,0.4,0.2" RenderTransformOrigin="0.376,0.485">
-            <Label Content="Welcome, User!" Foreground="White" FontSize="25" HorizontalAlignment="Center" RenderTransformOrigin="3.536,-1.191" Grid.Column="2" Margin="235,43,198.2,397" Width="246" FontWeight="Bold"/>
-            <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359.2,286" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Button Content="Manage Offers" Background="#FF104C71" Margin="67,224,359.2,213" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Button Content="Inquiries" Background="#FF104C71" Margin="358,224,68.2,213" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Button Content="Clients" Background="#FF104C71" Margin="358,151,68.2,286" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Button Content="Contracts" Background="#FF104C71" Margin="358,294,68.2,143" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Button Content="Suppliers" Background="#FF104C71" Margin="67,294,359.2,143" Grid.Column="2" Foreground="White" FontSize="22"/>
-            <Separator Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="67,90,0,0" VerticalAlignment="Top" Width="544"/>
-            <Separator Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="42,389,0,0" VerticalAlignment="Top" Width="544"/>
-            <Separator Grid.Column="2" HorizontalAlignment="Left" Height="27" Margin="67,389,0,0" VerticalAlignment="Top" Width="544"/>
+        <Grid Margin="10,0,-9.8,-36.8" RenderTransformOrigin="0.376,0.485" Height="524" VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="464*"/>
+                <RowDefinition Height="57*"/>
+            </Grid.RowDefinitions>
+            <Label Content="Welcome!" Foreground="White" FontSize="36" HorizontalAlignment="Center" RenderTransformOrigin="3.536,-1.191" Margin="247,37,252,376.4" Width="180" FontWeight="Bold"/>
+            <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359,259" Foreground="White" FontSize="22"/>
+            <Button Content="Manage Offers" Background="#FF104C71" Margin="67,224,359,186" Foreground="White" FontSize="22"/>
+            <Button Content="Inquiries" Background="#FF104C71" Margin="358,224,68,186" Foreground="White" FontSize="22"/>
+            <Button Content="Clients" Background="#FF104C71" Margin="358,151,68,259" Foreground="White" FontSize="22"/>
+            <Button Content="Contracts" Background="#FF104C71" Margin="358,294,68,116" Foreground="White" FontSize="22"/>
+            <Button Content="Suppliers" Background="#FF104C71" Margin="67,294,359,116" Foreground="White" FontSize="22"/>
+            <Separator HorizontalAlignment="Left" Height="27" Margin="67,90,0,0" VerticalAlignment="Top" Width="544"/>
+            <Separator HorizontalAlignment="Left" Height="27" Margin="67,381,0,0" VerticalAlignment="Top" Width="544"/>
+            <Button Click="Logout" Content="LOGOUT" Background="#FF972B2B" Margin="475,413,68,10.4" Foreground="White" FontSize="22"/>
         </Grid>
     </Border>
 </Window>
