--- a/BmsWpf/Views/LoginFormView.xaml
+++ b/BmsWpf/Views/LoginFormView.xaml
@@ -12,8 +12,8 @@
     <Border Background="#2e3137" 
             CornerRadius="20" 
             Margin="10">
-        <Grid>
-            <StackPanel Margin="40 20">
+        <Grid Margin="0,0,0.4,-15">
+            <StackPanel Margin="40,20,40.4,10">
                 <Label Content="Login" 
                        Foreground="White" 
                        FontSize="25" 
@@ -35,7 +35,7 @@
             </StackPanel>
             <Button x:Name="loginBtn" 
                     Content="Login" 
-                    Margin="50,208,175.4,53" 
+                    Margin="40,198,185.4,63" 
                     Background="#FF205C2F" 
                     Foreground="White" 
                     FontSize="18" 
@@ -44,11 +44,11 @@
                     CommandParameter="{Binding ElementName=PasswordField}"/>
             <Button x:Name="closeBtn"
                     Content="Close" 
-                    Margin="179,223,49.8,67.6" 
+                    Margin="172,202,56.4,63" 
                     Background="#FF852035" 
                     Foreground="White" 
                     FontSize="18" 
-                    Command="{Binding CloseApp}" />
+                    Command="{Binding CloseApp}" RenderTransformOrigin="0.485,-0.289" />
             <Separator Margin="40,277,40.8,36.6"></Separator>
         </Grid>
     </Border>
