--- a/BmsWpf/Views/Admin/ManageUser.xaml
+++ b/BmsWpf/Views/Admin/ManageUser.xaml
@@ -10,5 +10,6 @@
         <Label Content="Manage Users" HorizontalAlignment="Left" Margin="140,30,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
         <Separator HorizontalAlignment="Left" Height="9" Margin="118,62,0,0" VerticalAlignment="Top" Width="155"/>
         <DataGrid x:Name="UsersDataGrid" HorizontalAlignment="Left" Height="145" Margin="39,76,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="DataGrid_SelectionChanged" Loaded="UsersDataGrid_Loaded"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="287,229,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Background="#FFCB4040" Foreground="White" FontSize="14"/>
     </Grid>
 </Window>
