--- a/BmsWpf/Views/Admin/ManageUser.xaml
+++ b/BmsWpf/Views/Admin/ManageUser.xaml
@@ -9,7 +9,19 @@
     <Grid Background="#FF2E3137">
         <Label Content="Manage Users" HorizontalAlignment="Left" Margin="140,30,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Background="#FF2E3137" Foreground="White"/>
         <Separator HorizontalAlignment="Left" Height="9" Margin="118,62,0,0" VerticalAlignment="Top" Width="155"/>
-        <DataGrid x:Name="UsersDataGrid" HorizontalAlignment="Left" Height="145" Margin="39,76,0,0" VerticalAlignment="Top" Width="146" SelectionChanged="DataGrid_SelectionChanged" Loaded="UsersDataGrid_Loaded"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="287,229,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Background="#FFCB4040" Foreground="White" FontSize="14"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="287,229,0,0" VerticalAlignment="Top" Width="75" Click="Back_click" Background="#FFCB4040" Foreground="White" FontSize="14"/>
+        <ListBox x:Name="UserBox" HorizontalAlignment="Left" Height="145" Margin="24,84,0,0" VerticalAlignment="Top" Width="154" SelectionChanged="UserBox_SelectionChanged"/>
+        <Label Content="Username" HorizontalAlignment="Left" Margin="203,84,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <Label Content="Role" HorizontalAlignment="Left" Margin="203,149,0,0" VerticalAlignment="Top" Background="{x:Null}" Foreground="White"/>
+        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="23" Margin="203,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ComboBox Name="txtRole"
+            HorizontalAlignment="Left"
+            Margin="203,188,0,0" 
+            VerticalAlignment="Top" 
+            Width="120">
+            <ComboBoxItem Name="first" />
+            <ComboBoxItem Name="second"/>
+        </ComboBox>
+        <Button Content="Save" HorizontalAlignment="Left" Margin="198,229,0,0" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF4074CB" Foreground="White" FontSize="14"/>
     </Grid>
 </Window>
