--- a/BmsWpf/Views/Forms/InquireForm.xaml
+++ b/BmsWpf/Views/Forms/InquireForm.xaml
@@ -5,26 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BmsWpf.Views.Forms"
         mc:Ignorable="d"
-        Title="InquireForm" Height="538.4" Width="434.234">
+        Title="InquireForm" Height="523.2" Width="434.234">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
             <GradientStop Color="White" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
-    <Grid Margin="0,0,4,2.8" Background="#FF2E3137">
-        <Separator Margin="42,37,63,379" />
-        <Label Content="INQUIRE FORM"  HorizontalAlignment="Left" Foreground="#FFA1EAE8" FontSize="30" FontWeight="Bold" Margin="96,21,0,0" VerticalAlignment="Top"/>
-        <TextBox Height="24" BorderThickness="2"  BorderBrush="#313c4f" Margin="42,103,234,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Number" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <TextBox Height="24" BorderThickness="2"  BorderBrush="#313c4f" Margin="225,103,51,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
-        <TextBox Height="130" Margin="42,147,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Text" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <TextBox Height="30" Margin="42,282,212,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Contact Person" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <Button Content="Save" HorizontalAlignment="Left" Margin="225,457,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,-0.52" Background="#FF17597C" FontWeight="Bold" FontSize="16" Foreground="White"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="320,457,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
-        <TextBox Height="30" Margin="42,317,212,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Name" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <TextBox Height="30" Margin="42,352,212,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Phone / Email" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <ComboBox HorizontalAlignment="Left" Margin="243,282,0,0" VerticalAlignment="Top" Width="130" Height="30"/>
-        <TextBox Height="30" Margin="225,394,29,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Terms" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
-        <ComboBox HorizontalAlignment="Left" Margin="42,394,0,0" VerticalAlignment="Top" Width="170" Height="30"/>
+    <Grid Margin="0,0,4,-0.4" Background="#FF2E3137">
+        <Separator Margin="71,59,89,418" />
+        <Label Content="INQUIRE FORM"  HorizontalAlignment="Left" Foreground="#FFA1EAE8" FontSize="30" FontWeight="Bold" Margin="96,10,0,0" VerticalAlignment="Top"/>
+        <TextBox Height="23" BorderThickness="2"  BorderBrush="#313c4f" Margin="213,358,51,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
+        <TextBox Height="130" Margin="42,186,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Description" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
+        <TextBox Height="30" Margin="221,104,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Client" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
+        <Button Content="Save" HorizontalAlignment="Left" Margin="221,440,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,-0.52" Background="#FF17597C" FontWeight="Bold" FontSize="16" Foreground="White"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="312,440,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
+        <TextBox Height="30" Margin="42,138,212,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Email" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
+        <TextBox Height="30" Margin="221,139,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Phone" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" TextChanged="TextBox_TextChanged_1"/>
+        <ComboBox HorizontalAlignment="Left" Margin="42,358,0,0" VerticalAlignment="Top" Width="158"/>
+        <Label Content="Creator" HorizontalAlignment="Left" Margin="42,332,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+        <ComboBox HorizontalAlignment="Left" Margin="42,104,0,0" VerticalAlignment="Top" Width="170"/>
+        <Label Content="Client" HorizontalAlignment="Left" Margin="42,76,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+        <Separator Margin="71,399,89,78" />
     </Grid>
 </Window>
