--- a/BmsWpf/Views/Forms/InvoiceForm.xaml
+++ b/BmsWpf/Views/Forms/InvoiceForm.xaml
@@ -9,14 +9,14 @@
     <Grid Margin="0,0,-6.4,-1.6" Background="#FF2E3137">
         <Separator Margin="42,60,62.6,379.6" />
         <Label Content="Invoice"  HorizontalAlignment="Left" Foreground="#FFA1EAE8" FontSize="30" FontWeight="Bold" Margin="179,10,0,0" VerticalAlignment="Top" Width="121"/>
-        <TextBox Height="30" BorderThickness="2"  BorderBrush="#313c4f" Margin="42,103,387.6,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Number" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" VerticalContentAlignment="Center"/>
-        <TextBox Height="30"  BorderThickness="2"  BorderBrush="#313c4f" Margin="117,103,294.6,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" VerticalContentAlignment="Center"/>
+        <TextBox Height="30" BorderThickness="2"  BorderBrush="#313c4f" Margin="42,103,401,0" Foreground="Gray"  TextAlignment="Center" TextWrapping="Wrap" Text="Id" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" VerticalContentAlignment="Center"/>
         <TextBox Height="130" Margin="42,147,51,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Text" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
-        <TextBox Height="30" Margin="225,102,63,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Supplier / Client" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
+        <TextBox Height="30" Margin="276,102,52,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Supplier / Client" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <Button Content="Save" HorizontalAlignment="Left" Margin="225,411,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,-0.52" Background="#FF17597C" FontWeight="Bold" FontSize="16" Foreground="White"/>
         <TextBox Height="30" Margin="340,291,51.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Price" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <TextBox Height="30" Margin="340,326,51.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="VAT" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <TextBox Height="30" Margin="340,361,50.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Total" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <Button Content="Back" HorizontalAlignment="Left" Margin="319,411,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,-0.52" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
+        <DatePicker HorizontalAlignment="Left" Margin="104,105,0,0" VerticalAlignment="Top" Width="140" Height="27"/>
     </Grid>
 </Window>
