--- a/BmsWpf/MainWindow.xaml
+++ b/BmsWpf/MainWindow.xaml
@@ -13,10 +13,10 @@
                 <RowDefinition Height="57*"/>
             </Grid.RowDefinitions>
             <Label Content="Welcome!" Foreground="White" FontSize="36" HorizontalAlignment="Center" RenderTransformOrigin="3.536,-1.191" Margin="247,37,252,376.4" Width="180" FontWeight="Bold"/>
-            <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359,242.4" Foreground="White" FontSize="22"/>
-            <Button Content="Manage Offers" Background="#FF104C71" Margin="67,282,359,117.4" Foreground="White" FontSize="22"/>
-            <Button Content="Inquiries" Background="#FF104C71" Margin="358,282,68,122.4" Foreground="White" FontSize="22" RenderTransformOrigin="0.537,1.588"/>
-            <Button Content="Contragents" Background="#FF104C71" Margin="358,151,68,242.4" Foreground="White" FontSize="22"/>
+            <Button Content="Active Projects" Background="#FF104C71" Margin="67,151,359,242.4" Foreground="White" FontSize="22" Click="projects_Click"/>
+            <Button Content="Manage Offers" Background="#FF104C71" Margin="67,282,359,117.4" Foreground="White" FontSize="22" Click="offers_Click"/>
+            <Button Content="Inquiries" Background="#FF104C71" Margin="358,282,68,122.4" Foreground="White" FontSize="22" RenderTransformOrigin="0.537,1.588" Click="inquiries_Click"/>
+            <Button Content="Contragents" Background="#FF104C71" Margin="358,151,68,242.4" Foreground="White" FontSize="22" Click="contragents_Click"/>
             <Separator HorizontalAlignment="Left" Height="27" Margin="67,90,0,0" VerticalAlignment="Top" Width="544"/>
             <Separator HorizontalAlignment="Left" Height="27" Margin="67,376,0,0" VerticalAlignment="Top" Width="544"/>
             <Button Click="Logout" Content="LOGOUT" Background="#FF972B2B" Margin="475,408,68,15.4" Foreground="White" FontSize="22"/>
