--- a/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
+++ b/BmsWpf/Views/ChildWindows/ActiveProjects.xaml
@@ -18,10 +18,8 @@
         <Label Content="To" HorizontalAlignment="Left" Margin="220,104,0,0" VerticalAlignment="Top" FontWeight="Bold" Foreground="White"/>
         <Separator HorizontalAlignment="Left" Height="17" Margin="171,64,0,0" VerticalAlignment="Top" Width="303"/>
         <ListBox HorizontalAlignment="Left" Height="195" Margin="45,201,0,0" VerticalAlignment="Top" Width="577"/>
-        <Button HorizontalAlignment="Left" Margin="443,455,0,0" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF4074CB" Foreground="White" FontSize="14">
-            <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF4074CB" Foreground="White" FontSize="14"/>
-        </Button>
-        <Button Content="Add new" HorizontalAlignment="Left" Margin="45,415,0,0" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF0D5923" Foreground="White" FontSize="14"/>
+        <Button Content="Edit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="Edit_click" Background="#FF4074CB" Foreground="White" FontSize="14" Margin="435,457,0,0"/>
+        <Button Content="Add new" HorizontalAlignment="Left" Margin="45,415,0,0" VerticalAlignment="Top" Width="75" Click="Add_New_Click" Background="#FF0D5923" Foreground="White" FontSize="14"/>
         <Button Content="Back" HorizontalAlignment="Left" Margin="547,457,0,0" VerticalAlignment="Top" Width="75" Click="Back_click" Background="#FFCB4040" Foreground="White" FontSize="14"/>
     </Grid>
 </Window>
