--- a/BmsWpf/Views/ChildWindows/MainOffers.xaml
+++ b/BmsWpf/Views/ChildWindows/MainOffers.xaml
@@ -13,8 +13,8 @@
             FontSize="25" 
             HorizontalAlignment="Center" Margin="180,23,147,288" RenderTransformOrigin="0.5,0.5" Width="93"/>
         <Button Content="Back" HorizontalAlignment="Left" Margin="324,313,0,0" VerticalAlignment="Top" Width="75" Click="Back_click" Background="#FFCB4040" Foreground="White" FontSize="14"/>
-        <Button Content="Edit" HorizontalAlignment="Left" Margin="229,313,0,0" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF4074CB" Foreground="White" FontSize="14"/>
-        <Button Content="Add new" HorizontalAlignment="Left" Margin="37,263,0,0" VerticalAlignment="Top" Width="75" Click="Save_Click" Background="#FF0D5923" Foreground="White" FontSize="14"/>
+        <Button Content="Edit" HorizontalAlignment="Left" Margin="217,313,0,0" VerticalAlignment="Top" Width="75" Click="Edit_Click" Background="#FF4074CB" Foreground="White" FontSize="14"/>
+        <Button Content="Add new" HorizontalAlignment="Left" Margin="37,263,0,0" VerticalAlignment="Top" Width="75" Click="Add_New_Click" Background="#FF0D5923" Foreground="White" FontSize="14"/>
         <Separator HorizontalAlignment="Left" Height="11" Margin="140,56,0,0" VerticalAlignment="Top" Width="152"/>
 
     </Grid>
