--- a/BmsWpf/Views/Forms/ContragentForm.xaml
+++ b/BmsWpf/Views/Forms/ContragentForm.xaml
@@ -19,7 +19,7 @@
         <TextBox Height="86" Margin="10,273,19,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f" VerticalContentAlignment="Center" TextAlignment="Center" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
         <TextBox Height="55" Margin="10,200,225,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Address" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178"/>
         <Button Content="Save" HorizontalAlignment="Left" Margin="305,396,0,0" VerticalAlignment="Top" Width="75" Background="#FF1D5A8C" Foreground="White" FontWeight="Bold" FontSize="16"/>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="397,396,0,0" VerticalAlignment="Top" Width="75" Foreground="White" Background="#FFAE3434" FontSize="16" FontWeight="Bold" />
+        <Button Content="Back" HorizontalAlignment="Left" Margin="404,396,0,0" VerticalAlignment="Top" Width="75" Click="Back_Click" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
 
     </Grid>
 </Window>
