--- a/BmsWpf/Views/Forms/InvoiceForm.xaml
+++ b/BmsWpf/Views/Forms/InvoiceForm.xaml
@@ -16,7 +16,7 @@
         <TextBox Height="30" Margin="340,291,51.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Price" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <TextBox Height="30" Margin="340,326,51.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="VAT" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
         <TextBox Height="30" Margin="340,361,50.6,0" Foreground="Gray"  BorderThickness="2"  BorderBrush="#313c4f"  TextAlignment="Center" TextWrapping="Wrap" VerticalContentAlignment="Center" Text="Total" VerticalAlignment="Top" RenderTransformOrigin="0.323,-1.178" />
-        <Button Content="Back" HorizontalAlignment="Left" Margin="319,411,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.36,-0.52" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
         <DatePicker HorizontalAlignment="Left" Margin="104,105,0,0" VerticalAlignment="Top" Width="140" Height="27"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="314,411,0,0" VerticalAlignment="Top" Width="75" Click="Back_Click" Background="#FFAE3434" FontWeight="Bold" FontSize="16" Foreground="White"/>
     </Grid>
 </Window>
