--- a/BmsWpf/App.xaml
+++ b/BmsWpf/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:BmsWpf"
-             StartupUri="Views/LoginFormView.xaml">
+             StartupUri="Views/ChildWindows/MainOffers.xaml">
     <Application.Resources>
 
     </Application.Resources>
